// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`JobsList should render jobs list with no active active job if it is invalid 1`] = `
<DocumentFragment>
  <form
    class="job-filter-controls"
  >
    <div
      class="input-control tags-wrap"
    >
      <label
        class="font-weight-bold col-form-label-sm"
        for="tag-input"
      >
        Filter
      </label>
      <div
        class=" css-2b097c-container"
      >
        <div
          class=" css-uddrns-control"
        >
          <div
            class=" css-g1d714-ValueContainer"
          >
            <div
              class=" css-q70w24-placeholder"
            >
              Type tag name...
            </div>
            <div
              class="css-drs5yf-Input"
            >
              <div
                class=""
                style="display: inline-block;"
              >
                <input
                  aria-autocomplete="list"
                  aria-label="tags"
                  autocapitalize="none"
                  autocomplete="off"
                  autocorrect="off"
                  id="tag-input"
                  spellcheck="false"
                  style="box-sizing: content-box; width: 2px; border: 0px; font-size: inherit; opacity: 1; outline: 0; padding: 0px;"
                  tabindex="0"
                  type="text"
                  value=""
                />
                <div
                  style="position: absolute; top: 0px; left: 0px; visibility: hidden; height: 0px; overflow: scroll; white-space: pre; font-size: inherit; font-family: -webkit-small-control; letter-spacing: normal; text-transform: none;"
                />
              </div>
            </div>
          </div>
          <div
            class=" css-1hb7zxy-IndicatorsContainer"
          >
            <div
              aria-hidden="true"
              class=" css-at12u2-loadingIndicator"
            >
              <span
                class="css-1yvy2vo-LoadingDot"
              />
              <span
                class="css-zoievk-LoadingDot"
              />
              <span
                class="css-x748d8-LoadingDot"
              />
            </div>
            <span
              class=" css-1okebmr-indicatorSeparator"
            />
            <div
              aria-hidden="true"
              class=" css-tlfecz-indicatorContainer"
            >
              <svg
                aria-hidden="true"
                class="css-6q0nyr-Svg"
                focusable="false"
                height="20"
                viewBox="0 0 20 20"
                width="20"
              >
                <path
                  d="M4.516 7.548c0.436-0.446 1.043-0.481 1.576 0l3.908 3.747 3.908-3.747c0.533-0.481 1.141-0.446 1.574 0 0.436 0.445 0.408 1.197 0 1.615-0.406 0.418-4.695 4.502-4.695 4.502-0.217 0.223-0.502 0.335-0.787 0.335s-0.57-0.112-0.789-0.335c0 0-4.287-4.084-4.695-4.502s-0.436-1.17 0-1.615z"
                />
              </svg>
            </div>
          </div>
        </div>
        <div>
          <input
            name="tags"
            type="hidden"
          />
        </div>
      </div>
    </div>
  </form>
  <ul
    class="list-group scrollable job-list"
    data-testid="job-list"
    style="max-height: 0;"
  >
    <li
      class="list-group-item borderless item-less-padding"
    >
      <div
        class="simulation-tab  finished"
      >
        <div
          class="card-body card-body-less-padding"
        >
          <p
            class="card-title title"
          >
            <code>
              12344
            </code>
          </p>
          <p
            class="job-status"
            data-testid="job-status-12344"
          >
            Finished
          </p>
          <ul
            class="tags small"
            data-testid="tags"
          >
            <li
              data-testid="tag-11"
            >
              covid-19
            </li>
          </ul>
        </div>
      </div>
    </li>
    <li
      class="list-group-item borderless item-less-padding"
    >
      <div
        class="simulation-tab  finished"
      >
        <div
          class="card-body card-body-less-padding"
        >
          <p
            class="card-title title"
          >
            <code>
              12345
            </code>
          </p>
          <p
            class="job-status"
            data-testid="job-status-12345"
          >
            Finished
          </p>
          <ul
            class="tags small"
            data-testid="tags"
          >
            <li
              data-testid="tag-12"
            >
              SARS
            </li>
          </ul>
        </div>
      </div>
    </li>
    <li
      class="list-group-item borderless item-less-padding"
    >
      <div
        class="simulation-tab  finished"
      >
        <div
          class="card-body card-body-less-padding"
        >
          <p
            class="card-title title"
          >
            <code>
              12346
            </code>
          </p>
          <p
            class="job-status"
            data-testid="job-status-12346"
          >
            Finished
          </p>
          <ul
            class="tags small"
            data-testid="tags"
          >
            <li
              data-testid="tag-11"
            >
              covid-19
            </li>
            <li
              data-testid="tag-12"
            >
              SARS
            </li>
          </ul>
        </div>
      </div>
    </li>
    <li
      class="list-group-item borderless item-less-padding"
    >
      <div
        class="simulation-tab  finished"
      >
        <div
          class="card-body card-body-less-padding"
        >
          <p
            class="card-title title"
          >
            <code>
              123
            </code>
          </p>
          <p
            class="job-status"
            data-testid="job-status-123"
          >
            Finished
          </p>
          <ul
            class="tags small"
            data-testid="tags"
          />
        </div>
      </div>
    </li>
  </ul>
</DocumentFragment>
`;

exports[`JobsList should render jobs with active job if valid active job 1`] = `
<DocumentFragment>
  <form
    class="job-filter-controls"
  >
    <div
      class="input-control tags-wrap"
    >
      <label
        class="font-weight-bold col-form-label-sm"
        for="tag-input"
      >
        Filter
      </label>
      <div
        class=" css-2b097c-container"
      >
        <div
          class=" css-uddrns-control"
        >
          <div
            class=" css-g1d714-ValueContainer"
          >
            <div
              class=" css-q70w24-placeholder"
            >
              Type tag name...
            </div>
            <div
              class="css-drs5yf-Input"
            >
              <div
                class=""
                style="display: inline-block;"
              >
                <input
                  aria-autocomplete="list"
                  aria-label="tags"
                  autocapitalize="none"
                  autocomplete="off"
                  autocorrect="off"
                  id="tag-input"
                  spellcheck="false"
                  style="box-sizing: content-box; width: 2px; border: 0px; font-size: inherit; opacity: 1; outline: 0; padding: 0px;"
                  tabindex="0"
                  type="text"
                  value=""
                />
                <div
                  style="position: absolute; top: 0px; left: 0px; visibility: hidden; height: 0px; overflow: scroll; white-space: pre; font-size: inherit; font-family: -webkit-small-control; letter-spacing: normal; text-transform: none;"
                />
              </div>
            </div>
          </div>
          <div
            class=" css-1hb7zxy-IndicatorsContainer"
          >
            <div
              aria-hidden="true"
              class=" css-at12u2-loadingIndicator"
            >
              <span
                class="css-1yvy2vo-LoadingDot"
              />
              <span
                class="css-zoievk-LoadingDot"
              />
              <span
                class="css-x748d8-LoadingDot"
              />
            </div>
            <span
              class=" css-1okebmr-indicatorSeparator"
            />
            <div
              aria-hidden="true"
              class=" css-tlfecz-indicatorContainer"
            >
              <svg
                aria-hidden="true"
                class="css-6q0nyr-Svg"
                focusable="false"
                height="20"
                viewBox="0 0 20 20"
                width="20"
              >
                <path
                  d="M4.516 7.548c0.436-0.446 1.043-0.481 1.576 0l3.908 3.747 3.908-3.747c0.533-0.481 1.141-0.446 1.574 0 0.436 0.445 0.408 1.197 0 1.615-0.406 0.418-4.695 4.502-4.695 4.502-0.217 0.223-0.502 0.335-0.787 0.335s-0.57-0.112-0.789-0.335c0 0-4.287-4.084-4.695-4.502s-0.436-1.17 0-1.615z"
                />
              </svg>
            </div>
          </div>
        </div>
        <div>
          <input
            name="tags"
            type="hidden"
          />
        </div>
      </div>
    </div>
  </form>
  <ul
    class="list-group scrollable job-list"
    data-testid="job-list"
    style="max-height: 0;"
  >
    <li
      class="list-group-item borderless item-less-padding"
    >
      <div
        class="simulation-tab  finished"
      >
        <div
          class="card-body card-body-less-padding"
        >
          <p
            class="card-title title"
          >
            <code>
              12344
            </code>
          </p>
          <p
            class="job-status"
            data-testid="job-status-12344"
          >
            Finished
          </p>
          <ul
            class="tags small"
            data-testid="tags"
          >
            <li
              data-testid="tag-11"
            >
              covid-19
            </li>
          </ul>
        </div>
      </div>
    </li>
    <li
      class="list-group-item borderless item-less-padding"
    >
      <div
        class="simulation-tab active shadow finished"
      >
        <div
          class="card-body card-body-less-padding"
        >
          <p
            class="card-title title"
          >
            <code>
              12345
            </code>
          </p>
          <p
            class="job-status"
            data-testid="job-status-12345"
          >
            Finished
          </p>
          <ul
            class="tags small"
            data-testid="tags"
          >
            <li
              data-testid="tag-12"
            >
              SARS
            </li>
          </ul>
        </div>
      </div>
    </li>
    <li
      class="list-group-item borderless item-less-padding"
    >
      <div
        class="simulation-tab  finished"
      >
        <div
          class="card-body card-body-less-padding"
        >
          <p
            class="card-title title"
          >
            <code>
              12346
            </code>
          </p>
          <p
            class="job-status"
            data-testid="job-status-12346"
          >
            Finished
          </p>
          <ul
            class="tags small"
            data-testid="tags"
          >
            <li
              data-testid="tag-11"
            >
              covid-19
            </li>
            <li
              data-testid="tag-12"
            >
              SARS
            </li>
          </ul>
        </div>
      </div>
    </li>
    <li
      class="list-group-item borderless item-less-padding"
    >
      <div
        class="simulation-tab  finished"
      >
        <div
          class="card-body card-body-less-padding"
        >
          <p
            class="card-title title"
          >
            <code>
              123
            </code>
          </p>
          <p
            class="job-status"
            data-testid="job-status-123"
          >
            Finished
          </p>
          <ul
            class="tags small"
            data-testid="tags"
          />
        </div>
      </div>
    </li>
  </ul>
</DocumentFragment>
`;
